# WuVideoEdit

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/wuvideoedit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/wuvideoedit/: EditActivity.java  FileUtils.java  FirstFragment.java  MainActivity.java  MainRenderer.java  SecondFragment.java  VideoRecyclerViewAdapter.java
app/src/main/res/layout/: activity_edit.xml  activity_main.xml  video_timeline_cell.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/wuvideoedit/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
